# ResumeFlow

./: .gitattributes  .gitignore  LICENSE  README.md  demo-job-detail-extraction.py  demo-result.txt  main.py  packages.txt  publish.sh  pyproject.toml  requirements.txt  ui.py  web_app.py
.devcontainer/: devcontainer.json
.streamlit/: config.toml  requirements.txt
job_llm/: data_extraction.py  runInit.py
job_llm/notebooks/: pratice.ipynb
job_llm/prompts/: compare-create-resume-from-jd.txt  extract-job-detail.txt  generate-resume-details.txt  job-detail-extractor.txt  resume-extractor.txt
job_llm/scripts/: auto-apply-pipeline.py  job-detail-extraction.py  runInit.py
job_llm/utils/: auto_apply_model.py  data_extraction.py  llm_models.py  resume_reader.py  utils.py
logs/: Eisneramper_SoftwareDeveloper-ConsultingInternshipSummer2024_JD.json  Eisneramper_SoftwareDeveloper-ConsultingInternshipSummer2024_cv.txt  Eisneramper_SoftwareDeveloper-ConsultingInternshipSummer2024_resume.json  Eisneramper_SoftwareDeveloper-ConsultingInternship_1700629562.txt  ameyBhilegaonkar.txt  cv_ff.txt  dd.json  job_details.json  resume.cls
master_data/: saurabh-profile.json  saurabh_profile.json
output/: Eisneramper_SoftwareDevelop_JD.json  Eisneramper_SoftwareDevelop_cv.txt  Eisneramper_SoftwareDevelop_resume.json  Eisneramper_SoftwareDeveloper-ConsultingInternshipSummer2024_JD.json  Eisneramper_SoftwareDeveloper-ConsultingInternshipSummer2024_cv.txt  Eisneramper_SoftwareDeveloper-ConsultingInternshipSummer2024_resume.json  Itron_Intern-Software_JD.json  Itron_Intern-Software_cv.txt  Itron_Intern-Software_resume.json  JD-InternFullStackEngineer.json  Nvidia_SoftwareIntern_JD.json  Squarespace_WebsiteDesigner_cv.txt  Squarespace_WebsiteDesigner_resume.json  TechSolutionsInc._TechnicalWriter_JD.json  TechSolutionsInc._TechnicalWriter_cv.txt  TechSolutionsInc._TechnicalWriter_resume.json  TheBoringCompany_SoftwareEnginee_JD.json  TheBoringCompany_SoftwareEnginee_cv.txt  TheBoringCompany_SoftwareEnginee_resume.json  ameyBhilegaonkar.json  demo-result_1699005019.json  final-resume.json  job_details.json
resources/: auto_job_apply_workflow.excalidraw  publish.sh  requirements.txt  resume-amey.tex  resume-jake.tex
src/: config.py
src/prompts/: compare-prompt.txt  generate-resume-details.txt  resume-extractor.txt
src/scripts/: auto-apply-pipeline.py  auto_apply_pipeline.py  job_detail_extraction.py  runInit.py
src/templates/: resume.cls  (+1 more)
zlm/: Unparsed-json-list.txt  __init__.py  variables.py
(+32 files in other folders)
