[tool.poetry]
name = "zlm"
version = "0.1.33"
description = "Simplify and improve your job hunting experience by integrating LLMs to automate tasks such as resume and cover letter generation, as well as application submission, saving users time and effort."
authors = ["Saurabh Zinjad <zinjadsaurabh1997@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11.6"
openai = "^1.5.0"
beautifulsoup4 = "^4.12.2"
fpdf = "^1.7.2"
pypdf2 = "^3.0.1"
jinja2 = "^3.1.2"
requests = "^2.31.0"
google-generativeai = "^0.3.2"
pandas = "^2.1.4"
streamlit = "^1.30.0"
nltk = "^3.8.1"
scikit-learn = "^1.4.0"
langchain = "^0.1.6"
pdf2image = "^1.17.0"
poppler-utils = "^0.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"